task1/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: fullnode-http
  namespace: demo
spec:
  ports:
  - name: http
    port: 9933
    protocol: TCP
  selector:
    app: fullnode
---
apiVersion: v1
kind: Service
metadata:
  name: fullnode-websocket
  namespace: demo
spec:
  ports:
  - name: websocket
    port: 9944
    protocol: TCP
  selector:
    app: fullnode
---
apiVersion: v1
kind: Service
metadata:
  name: fullnode-tcp-p2p
  namespace: demo
spec:
  ports:
  - name: p2p
    port: 30333
  selector:
    app: fullnode
