task1/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fullnode
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - fullnode.haidv.tech
    secretName: domain-fullnode-tls
  rules:
  - host: fullnode.haidv.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fullnode-http
            port:
              number: 9933
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: p2p
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - p2p.haidv.tech
    secretName: domain-fullnode-tls
  rules:
  - host: p2p.haidv.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fullnode-p2p
            port:
              number: 30333
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: socket
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - socket.haidv.tech
    secretName: domain-fullnode-tls
  rules:
  - host: socket.haidv.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fullnode-websocket
            port:
              number: 9944
